--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "co": "^4.6.0",
     "coffee-script": "^1.10.0",
     "hubot-test-helper": "^1.4.3",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2"
   }
 }
